added clickable image tiles

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,5 @@
 <h1> My App Home Page </h1>
 
-<%= link_to 'Sign in with Spotify', '/auth/spotify' %>
+<%= link_to 'Sign in with Spotify', '/auth/spotify' %><br>
+
+<%= link_to 'Go to albums', '/albums' %>
