--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>RspotifyTest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
   <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
   <script type="text/javascript" src="https://unpkg.com/react-vis/dist/dist.min.js"></script>
   <%= stylesheet_link_tag 'application', media: 'all' %>
@@ -26,6 +26,8 @@
         <%- if current_user -%>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
+          <li><%= link_to 'Go to albums', '/albums' %></li>
+          <li><%= link_to 'Sign in with Spotify', '/auth/spotify' %></li>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
           <li><%= link_to 'Sign In', new_user_session_path %></li>
         <%- end -%>
