--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,16 +18,26 @@
 
  body {
    font-family: 'Roboto', sans-serif;
-   background-color: #ecf0f1;
+   /* background-color: #ecf0f1; */
  }
 
 .album-tile {
   padding: 1rem;
   text-align: center;
+  width: 20%;
+  display:inline-block;
+}
+
+.album-tile:hover {
+  padding: 1rem;
+  text-align: center;
+  width: 20%;
+  display:inline-block;
+  background-color: black;
+
 }
 
 .index-header {
-  text-align: center;
   color: #2980b9;
 }
 
