--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,6 @@
 
  body {
    font-family: 'Roboto', sans-serif;
-   /* background-color: #ecf0f1; */
  }
 
 .album-tile {
@@ -43,4 +42,12 @@
 
 .top-bar {
   background-color: #2c3e50;
+}
+
+.selectable-albums {
+  display: flex;
+}
+
+h2 {
+  font-size: 1.5em;
 }
