--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,11 @@
 
 }
 
+.container {
+  display: flex;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .index-header {
   color: #2980b9;
 }
@@ -44,10 +49,23 @@
   background-color: #2c3e50;
 }
 
+.graph {
+  padding: 1em;
+}
+
 .selectable-albums {
   display: flex;
 }
 
+.album-show-tile {
+  padding: .1em;
+}
+
+
 h2 {
-  font-size: 1.5em;
+  font-size: 1.2em;
+}
+
+h1.album-header {
+  padding: .5em;
 }
