updated styling on graph page, seperated css files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AlbumShowcase</title>
+  <title>Album Analytics</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
@@ -18,7 +18,7 @@
   <nav class="top-bar">
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/albums">AlbumShowcase</a></h1>
+        <h1><a href="/albums">Album Analytics</a></h1>
       </li>
     </ul>
 
