--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <%- if current_user && session[:spotify_linked] -%>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <% elsif current_user && !session[:spotify_linked] -%>
-          <li><%= link_to 'Link to Spotify', '/auth/spotify' %></li>
+          <li><%= link_to 'Get Spotify My Albums', '/auth/spotify' %></li>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
