--- a/app/assets/stylesheets/show_custom.css
+++ b/app/assets/stylesheets/show_custom.css
@@ -3,20 +3,40 @@
 }
 
 .container {
- display: inline-grid;
- grid-template-columns: 2fr 1.2fr 1fr;
- text-align: left;
+  border: 1px solid blue;
+  display: flex;
+  flex-direction: row;
+
 }
 
-.container .details {
-  padding: 1em;
+.item {
+  border: 1px solid red;
+  padding: .5em;
 }
 
-.container .graph {
-   padding: 1em;
-   text-align: center;
-  }
+.graph {
+  flex-basis: 50%;
+  text-align: center;
+}
 
+.chart {
+  display: block;
+  margin: auto auto;
+}
+
+.album-info {
+  flex-basis: 25%;
+
+}
+
+.album-songs {
+  flex-basis: 25%;
+
+}
+
+h1.album-header {
+ padding: .2em;
+}
 
 button {
   background-color: #2c3e50;
