--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,8 @@
 
     <section class="top-bar-section">
       <ul class="right">
-        <%- if current_user && session[:spotify_linked] -%>
-          <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
-        <% elsif current_user && !session[:spotify_linked] -%>
-          <li><%= link_to 'Get Spotify My Albums', '/auth/spotify' %></li>
+        <%- if current_user -%>
+          <li><%= link_to 'Link to Spotify or Update Albums', '/auth/spotify' %></li>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
