--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
   <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script type="text/javascript" src="https://unpkg.com/react-vis/dist/dist.min.js"></script>
   <%= stylesheet_link_tag 'application', media: 'all' %>
 
@@ -25,7 +26,7 @@
     <section class="top-bar-section">
       <ul class="right">
         <%- if current_user -%>
-          <li><%= link_to 'Link to Spotify or Update Albums', '/auth/spotify' %></li>
+          <li><%= link_to 'Link to Spotify or Update Albums', '/auth/spotify', data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Connecting to Spotify..."} %></li>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
