--- a/app/assets/stylesheets/index_custom.scss
+++ b/app/assets/stylesheets/index_custom.scss
@@ -1,5 +1,6 @@
 body {
   font-family: 'Red Hat Display', sans-serif;
+  background-color: #eeeeee
 }
 
 .album-tile {
@@ -17,12 +18,12 @@ body {
 }
 
 .index-header {
- color: #2980b9;
+ color: #240041;
  padding: 1rem;
 }
 
-.top-bar {
- background-color: #2c3e50;
+.top-bar, .top-bar-section {
+ background-color: #222831;
 }
 
 .album-show-tile {
@@ -31,5 +32,5 @@ body {
 
 h2 {
  font-size: 1.2em;
- color: #2980b9;
+ color: #240041;
 }
