--- a/app/assets/stylesheets/show_custom.scss
+++ b/app/assets/stylesheets/show_custom.scss
@@ -1,11 +1,9 @@
 .container {
-  border: 1px solid blue;
   display: flex;
   flex-direction: row;
 }
 
 .item {
-  border: 1px solid red;
   padding: .5em;
 }
 
@@ -17,8 +15,6 @@
 .chart {
   display: block;
   overflow: visible;
-  // width: 700px;
-  // height: 600px;
   margin: auto auto;
 }
 
@@ -34,7 +30,6 @@
 
 .selectable-albums {
  display: flex;
- border: 1px solid green;
  justify-content: center;
  box-sizing: border-box;
 }
@@ -62,5 +57,9 @@ h1.album-header {
 }
 
 button {
-  background-color: #2c3e50;
+  background-color: #00adb5;
+}
+
+.button {
+  background-color: #00adb5;
 }
