--- a/app/assets/stylesheets/index_custom.scss
+++ b/app/assets/stylesheets/index_custom.scss
@@ -18,7 +18,7 @@ body {
 }
 
 .index-header {
- color: #240041;
+ color: #f73859;
  padding: 1rem;
 }
 
@@ -32,5 +32,5 @@ body {
 
 h2 {
  font-size: 1.2em;
- color: #240041;
+ color: #f73859;
 }
