--- a/app/assets/stylesheets/index_custom.scss
+++ b/app/assets/stylesheets/index_custom.scss
@@ -1,6 +1,6 @@
 body {
   font-family: 'Red Hat Display', sans-serif;
-  background-color: #eeeeee
+  // background-color: #e3e3e3
 }
 
 .album-tile {
@@ -14,6 +14,7 @@ body {
     width: 20%;
     display:inline-block;
     background-color: black;
+    border-radius: .5em;
   }
 }
 
@@ -23,7 +24,7 @@ body {
 }
 
 .top-bar, .top-bar-section {
- background-color: #222831;
+ background-color: #233142;
 }
 
 .album-show-tile {
@@ -32,5 +33,5 @@ body {
 
 h2 {
  font-size: 1.2em;
- color: #f73859;
+ color: #f95959;
 }
