--- a/app/assets/stylesheets/show_custom.scss
+++ b/app/assets/stylesheets/show_custom.scss
@@ -1,4 +1,22 @@
+.show-image {
+  width: 35%;
+  height: 35%;
+  padding: 2em;
+  border-radius: 3em;
+  overflow: visible;
+}
+
 .container {
+  display: flex;
+  flex-direction: row;
+}
+
+svg:not(:root) {
+  overflow: visible;
+}
+
+
+.container2 {
   display: flex;
   flex-direction: row;
 }
@@ -7,27 +25,32 @@
   padding: .5em;
 }
 
+.chart {
+  width: 100%;
+  height: 100%;
+}
+
 .graph {
   flex-basis: 50%;
   text-align: center;
 }
 
-.chart {
-  // display: block;
-  // overflow: visible;
-  // margin: auto auto;
-  // viewBox: 0, 0, 50, 50;
-  // background-color: blue;
-}
 
 .album-info {
   flex-basis: 25%;
-
+  margin: auto;
+  margin-top: 0;
+  width: 30%;
+  height: 30%;
+  vertical-align: top;
 }
 
 .album-songs {
   flex-basis: 25%;
-
+  margin: auto;
+  margin-top: 0;
+  width: 30%;
+  height: 30%;
 }
 
 .selectable-albums {
@@ -44,7 +67,14 @@
 .single-album:hover {
   padding: .5em;
   background-color: black;
+  border-radius: .3em;
 }
+
+// .single-album:focus {
+//   padding: .5em;
+//   background-color: black;
+//   border-radius: .3em;
+// }
 
 .album-show-button {
   text-align: center;
@@ -56,20 +86,28 @@
 
 h1.album-header {
  padding: .2em;
- color: #f73859;
+ color: #f95959;
 }
 
 button {
-  background-color: #384259;
+  background-color: #455d7a;
   border-radius: 5px;
+  &:hover {
+    background-color: #f95959;
+    border-radius: 5px;
+  }
 }
 
 .button {
-  background-color: #384259;
+  background-color: #455d7a;
   border-radius: 5px;
+  &:hover {
+    background-color: #f95959;
+    border-radius: 5px;
+  }
 }
 
 h2.titles {
-  color: #f73859;
-  font-size: 1.2em;
+  color: #f95959;
+  font-size: 2em;
 }
