--- a/app/assets/stylesheets/index_custom.scss
+++ b/app/assets/stylesheets/index_custom.scss
@@ -1,6 +1,9 @@
 body {
-  font-family: 'Red Hat Display', sans-serif;
-  // background-color: #e3e3e3
+  font-family: 'Roboto Slab', serif;
+}
+
+h1.index-header {
+  font-family: 'Roboto Slab', serif;
 }
 
 .album-tile {
@@ -34,4 +37,5 @@ body {
 h2 {
  font-size: 1.2em;
  color: #f95959;
+ font-family: 'Roboto Slab', serif;
 }
