--- a/app/assets/stylesheets/show_custom.scss
+++ b/app/assets/stylesheets/show_custom.scss
@@ -87,6 +87,7 @@ svg:not(:root) {
 h1.album-header {
  padding: .2em;
  color: #f95959;
+ font-family: 'Roboto Slab', serif;
 }
 
 button {
@@ -110,4 +111,5 @@ button {
 h2.titles {
   color: #f95959;
   font-size: 2em;
+  font-family: 'Roboto Slab', serif;
 }
