--- a/app/assets/stylesheets/show_custom.scss
+++ b/app/assets/stylesheets/show_custom.scss
@@ -1,14 +1,17 @@
 .show-image {
   width: 400px;
   height: 400px;
-  border-radius: 3em;
-  overflow: visible;
-  display: block;
+  border-radius: 2em;
+  // overflow: visible;
+  // display: block;
+  // padding-top: 2em;
 }
 
 .container {
   display: flex;
   flex-direction: row;
+  // border: solid;
+  // border-color: red;
 }
 
 svg:not(:root) {
@@ -19,6 +22,11 @@ svg.rv-xy-plot__inner {
   display: flex;
 }
 
+p { margin: .5em 0;}
+
+span.bold {
+  color: #233142;
+}
 
 .container2 {
   display: flex;
@@ -34,12 +42,16 @@ svg.rv-xy-plot__inner {
 .chart {
   width: 100%;
   height: 100%;
-  transform: translate(2em, 0em);
+  transform: translate(2.5em, 0em);
+  overflow: visible;
+
 }
 
 .graph {
   flex-basis: 50%;
   text-align: center;
+  overflow: visible;
+
 }
 
 
@@ -53,6 +65,9 @@ svg.rv-xy-plot__inner {
   vertical-align: top;
   flex-wrap: nowrap;
 
+  // border: solid;
+  // border-color: blue;
+
 
 }
 
@@ -62,6 +77,9 @@ svg.rv-xy-plot__inner {
   margin-top: 0;
   width: 30%;
   height: 30%;
+
+  // border: solid;
+  // border-color: green;
 }
 
 .selectable-albums {
@@ -100,7 +118,7 @@ svg.rv-xy-plot__inner {
 
 h1.album-header {
  padding: .2em;
- color: #f95959;
+ color: black;
  font-family: 'Roboto Slab', serif;
  text-decoration: underline;
 }
