selcted songs on form scroll with user

--- a/app/assets/stylesheets/form_custom.scss
+++ b/app/assets/stylesheets/form_custom.scss
@@ -29,3 +29,13 @@ h2.songs-header {
   font-size: 1.65em
   // font-family: 'Roboto Slab', serif;
 }
+
+.select-song-list{
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 1em;
+}
+
+.song-list-header {
+  font-size: 1.6em;
+}
