--- a/app/assets/stylesheets/index_custom.scss
+++ b/app/assets/stylesheets/index_custom.scss
@@ -1,27 +1,43 @@
 body {
   font-family: 'Roboto Slab', serif;
-  background: url("background.jpeg");
+  // background: url("background.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-color: #F0F0F0;
 }
 
 h1.index-header {
   font-family: 'Roboto Slab', serif;
   text-decoration: underline;
+  width: 70%;
+  margin: auto;
 }
 
-.album-tile {
- padding: 1rem;
- text-align: center;
- width: 20%;
- display:inline-block;
-  &:hover{
-    padding: 1rem;
-    text-align: center;
-    width: 20%;
-    display:inline-block;
-    background-color: black;
-    border-radius: .5em;
+.tiles-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 70%;
+  margin: auto;
+
+  .album-tile {
+    margin: 0.5rem;
+    width: 18%;
+
+    &:hover{
+      -webkit-box-shadow: -1px 4px 29px 0px rgba(0,0,0,0.5);
+      -moz-box-shadow: -1px 4px 29px 0px rgba(0,0,0,0.5);
+      box-shadow: -1px 4px 29px 0px rgba(0,0,0,0.5);
+    }
+
+    &.add-button {
+      display: flex;
+      height: 225px;
+      justify-content: center;
+      align-items: center;
+      background: #fafafa;
+      border: 2px solid #d2d2d2;
+      border-radius: 5px;
+    }
   }
 }
 
