--- a/app/assets/stylesheets/show_custom.scss
+++ b/app/assets/stylesheets/show_custom.scss
@@ -4,7 +4,7 @@
   border-radius: 2em;
   text-align: center;
   margin: 30px;
-
+  margin-top: 120px;
 }
 
 
@@ -35,6 +35,7 @@ span.bold {
 }
 
 span.info-titles {
+font-weight: bold;
 font-size: 1em;
 }
 
@@ -49,9 +50,6 @@ font-size: 1em;
 
 }
 
-.item {
-  // padding: .5em;
-}
 
 .chart {
   width: 100%;
@@ -67,7 +65,7 @@ font-size: 1em;
 }
 
 .image-wrapper, .album-songs {
-  padding-top: 25px;
+  padding-top: 10px;
 }
 
 
@@ -117,9 +115,9 @@ h1.album-header {
  text-decoration: underline;
 }
 
-div.item.graph {
-  text-align: center;
-}
+// div.item.graph {
+//   text-align: center;
+// }
 
 .rv-radar-chart {
   width: 100%;
@@ -153,7 +151,7 @@ button {
 
 h2.titles {
   color: #f95959;
-  font-size: 1.2em;
+  font-size: 1.5em;
   font-family: 'Roboto Slab', serif;
   text-decoration: underline;
   font-weight: 600;
