--- a/app/assets/stylesheets/index_custom.scss
+++ b/app/assets/stylesheets/index_custom.scss
@@ -41,7 +41,13 @@ h1.index-header {
   }
 }
 
-
+.sign-in-message {
+  text-align: center;
+  font-size: 1.5em;
+}
+.sign-in-header {
+  font-weight: bolder;
+}
 
 .index-header {
  color: black;
