--- a/app/assets/stylesheets/index_custom.scss
+++ b/app/assets/stylesheets/index_custom.scss
@@ -1,6 +1,5 @@
 body {
   font-family: 'Roboto Slab', serif;
-  // background: url("background.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: #F0F0F0;
@@ -8,7 +7,6 @@ body {
 
 h1.index-header {
   font-family: 'Roboto Slab', serif;
-  text-decoration: underline;
   width: 70%;
   margin: auto;
 }
@@ -18,6 +16,7 @@ h1.index-header {
   flex-wrap: wrap;
   width: 70%;
   margin: auto;
+  background-color: white;
 
   .album-tile {
     margin: 0.5rem;
@@ -61,6 +60,7 @@ h1.index-header {
 .album-show-tile {
  padding: .1em;
 }
+
 
 span.info-text {
   font-style: italic;
