--- a/app/assets/stylesheets/index_custom.scss
+++ b/app/assets/stylesheets/index_custom.scss
@@ -11,6 +11,27 @@ h1.index-header {
   margin: auto;
 }
 
+.sign-in-message-container {
+  text-align: center;
+
+}
+
+.sign-in-message-text {
+  padding-top: 30px;
+}
+
+.home-page-text {
+  font-size: 2em;
+
+  span {
+    font-size: 1em;
+  }
+}
+
+.home-page-image {
+  background-image: url('home-page');
+}
+
 .tiles-container {
   display: flex;
   flex-wrap: wrap;
