seperated homepage in different component than album index

--- a/app/assets/stylesheets/index_custom.scss
+++ b/app/assets/stylesheets/index_custom.scss
@@ -13,7 +13,10 @@ h1.index-header {
 
 .sign-in-message-container {
   text-align: center;
+}
 
+.sign-in-link-text {
+  padding-top: 1rem;
 }
 
 .sign-in-message-text {
