--- a/app/assets/stylesheets/show_custom.scss
+++ b/app/assets/stylesheets/show_custom.scss
@@ -44,14 +44,6 @@ font-size: 1em;
   font-style: italic;
 }
 
-.container2 {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-
-}
-
-
 .chart {
   width: 100%;
   height: 100%;
@@ -65,10 +57,6 @@ font-size: 1em;
   padding: 30px;
 }
 
-.image-wrapper {
-  padding-top: 10px;
-}
-
  .album-songs {
    padding-top: 15px;
  }
@@ -79,13 +67,13 @@ font-size: 1em;
  box-sizing: border-box;
  background-color: #f95959;
  border-radius: .2em;
- // padding-bottom: .2em;
-
 }
 
 .image-wrapper {
   display: block;
-  padding: 20px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
   p{
     margin-bottom: 3px;
   }
